# -dungeon-bot--NOVA--

./: .env  .replit  Dictionary  RENDER_DEPLOY.md  bot_setup.py  cleaner.py  cooldown.py  cooldown_data.json  cooldowns.json  data_utils.py  dungeon-bot--nova-firebase-adminsdk-fbsvc-f1014530c2.json  dungeon_cooldowns.json  dungeons_data.json  dungeons_system.py  economy_commands.py  equipment_data.json  firebase_config.py  firebase_manager.py  fix_firebase.py  game_commands.py  help_system.py  job_commands.py  keep_alive.py  logs_system.py  main.py  marriage_system.py  new_games.py  price_state.json  pyproject.toml  render.yaml  requirements.txt  rewards.py  roles_utils.py  setup_firebase.py  shop_config.py  shop_system.py  specialization_commands.py  store_prices.py  sync_data.py  system_logs.json  (+4 more)
attached_assets/: Pasted--Flask-5000-2025-07-26-19-23-56-INFO-discord-client-logging-in-using-sta-1753557844233_1753557844233.txt  Pasted--Traceback-most-recent-call-last-rd-client-logging-in-using-static-token-File--1753557670347_1753557670347.txt
